[project]
name = "code-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgi-lifespan>=2.1.0",
    "deepgram-sdk>=5.1.0",
    "fastapi[standard]>=0.119.1",
    "langchain>=1.0.1",
    "langchain-community>=0.4",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "openai>=2.6.0",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "qdrant-client>=1.15.1",
    "redis>=6.4.0",
    "unstructured>=0.18.15",
    "uvicorn[standard]>=0.38.0",
]
